First partial/Basic compiler/antlr/marzoParser.py
# Generated from /home/lars/Files/Tec de Monterrey/Octavo Semestre/Compiladores/Primer parcial/Basic compiler/antlr/marzo.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class marzoParser ( Parser ):

    grammarFileName = "marzo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "'and'", "'or'", "'not'", 
                     "'>='", "'<='", "'>'", "'<'", "'if ('", "') then'", 
                     "'end'", "'else'", "'print('", "')'", "<INVALID>", 
                     "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "KEYWORD", "ASSIGN", "IDENTIFIER", "ALPHA", "INTEGER_NUMBER", 
                      "WS" ]

    RULE_program = 0
    RULE_expr = 1
    RULE_arith_expr = 2
    RULE_relational_expr = 3
    RULE_logical_expr = 4
    RULE_comp_expr = 5
    RULE_print_op = 6
    RULE_assignment = 7
    RULE_declaration = 8

    ruleNames =  [ "program", "expr", "arith_expr", "relational_expr", "logical_expr", 
                   "comp_expr", "print_op", "assignment", "declaration" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    KEYWORD=16
    ASSIGN=17
    IDENTIFIER=18
    ALPHA=19
    INTEGER_NUMBER=20
    WS=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(marzoParser.ExprContext)
            else:
                return self.getTypedRuleContext(marzoParser.ExprContext,i)


        def getRuleIndex(self):
            return marzoParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = marzoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 18
                self.expr()
                self.state = 21 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << marzoParser.T__4) | (1 << marzoParser.T__9) | (1 << marzoParser.T__13) | (1 << marzoParser.KEYWORD) | (1 << marzoParser.IDENTIFIER) | (1 << marzoParser.INTEGER_NUMBER))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return marzoParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class LogicalExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a marzoParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def logical_expr(self):
            return self.getTypedRuleContext(marzoParser.Logical_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalExpr" ):
                listener.enterLogicalExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalExpr" ):
                listener.exitLogicalExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalExpr" ):
                return visitor.visitLogicalExpr(self)
            else:
                return visitor.visitChildren(self)


    class CompExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a marzoParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def comp_expr(self):
            return self.getTypedRuleContext(marzoParser.Comp_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompExpr" ):
                listener.enterCompExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompExpr" ):
                listener.exitCompExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompExpr" ):
                return visitor.visitCompExpr(self)
            else:
                return visitor.visitChildren(self)


    class RelationalExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a marzoParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def relational_expr(self):
            return self.getTypedRuleContext(marzoParser.Relational_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationalExpr" ):
                listener.enterRelationalExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationalExpr" ):
                listener.exitRelationalExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelationalExpr" ):
                return visitor.visitRelationalExpr(self)
            else:
                return visitor.visitChildren(self)


    class ArithExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a marzoParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arith_expr(self):
            return self.getTypedRuleContext(marzoParser.Arith_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithExpr" ):
                listener.enterArithExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithExpr" ):
                listener.exitArithExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithExpr" ):
                return visitor.visitArithExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self):

        localctx = marzoParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expr)
        try:
            self.state = 27
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = marzoParser.ArithExprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 23
                self.arith_expr(0)
                pass

            elif la_ == 2:
                localctx = marzoParser.RelationalExprContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 24
                self.relational_expr()
                pass

            elif la_ == 3:
                localctx = marzoParser.LogicalExprContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 25
                self.logical_expr(0)
                pass

            elif la_ == 4:
                localctx = marzoParser.CompExprContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 26
                self.comp_expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arith_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return marzoParser.RULE_arith_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class AddContext(Arith_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a marzoParser.Arith_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arith_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(marzoParser.Arith_exprContext)
            else:
                return self.getTypedRuleContext(marzoParser.Arith_exprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd" ):
                listener.enterAdd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd" ):
                listener.exitAdd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdd" ):
                return visitor.visitAdd(self)
            else:
                return visitor.visitChildren(self)


    class SubContext(Arith_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a marzoParser.Arith_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arith_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(marzoParser.Arith_exprContext)
            else:
                return self.getTypedRuleContext(marzoParser.Arith_exprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSub" ):
                listener.enterSub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSub" ):
                listener.exitSub(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSub" ):
                return visitor.visitSub(self)
            else:
                return visitor.visitChildren(self)


    class IntNumberContext(Arith_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a marzoParser.Arith_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTEGER_NUMBER(self):
            return self.getToken(marzoParser.INTEGER_NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntNumber" ):
                listener.enterIntNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntNumber" ):
                listener.exitIntNumber(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntNumber" ):
                return visitor.visitIntNumber(self)
            else:
                return visitor.visitChildren(self)



    def arith_expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = marzoParser.Arith_exprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_arith_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = marzoParser.IntNumberContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 30
            self.match(marzoParser.INTEGER_NUMBER)
            self._ctx.stop = self._input.LT(-1)
            self.state = 40
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 38
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        localctx = marzoParser.AddContext(self, marzoParser.Arith_exprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_arith_expr)
                        self.state = 32
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 33
                        self.match(marzoParser.T__0)
                        self.state = 34
                        self.arith_expr(4)
                        pass

                    elif la_ == 2:
                        localctx = marzoParser.SubContext(self, marzoParser.Arith_exprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_arith_expr)
                        self.state = 35
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 36
                        self.match(marzoParser.T__1)
                        self.state = 37
                        self.arith_expr(3)
                        pass

             
                self.state = 42
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Relational_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return marzoParser.RULE_relational_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DeclareContext(Relational_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a marzoParser.Relational_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def declaration(self):
            return self.getTypedRuleContext(marzoParser.DeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclare" ):
                listener.enterDeclare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclare" ):
                listener.exitDeclare(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclare" ):
                return visitor.visitDeclare(self)
            else:
                return visitor.visitChildren(self)


    class AssignContext(Relational_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a marzoParser.Relational_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignment(self):
            return self.getTypedRuleContext(marzoParser.AssignmentContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)



    def relational_expr(self):

        localctx = marzoParser.Relational_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_relational_expr)
        try:
            self.state = 45
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [marzoParser.KEYWORD]:
                localctx = marzoParser.DeclareContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                self.declaration()
                pass
            elif token in [marzoParser.IDENTIFIER]:
                localctx = marzoParser.AssignContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 44
                self.assignment()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logical_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return marzoParser.RULE_logical_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class GCondContext(Logical_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a marzoParser.Logical_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def logical_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(marzoParser.Logical_exprContext)
            else:
                return self.getTypedRuleContext(marzoParser.Logical_exprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGCond" ):
                listener.enterGCond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGCond" ):
                listener.exitGCond(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGCond" ):
                return visitor.visitGCond(self)
            else:
                return visitor.visitChildren(self)


    class GoeCondContext(Logical_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a marzoParser.Logical_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def logical_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(marzoParser.Logical_exprContext)
            else:
                return self.getTypedRuleContext(marzoParser.Logical_exprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGoeCond" ):
                listener.enterGoeCond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGoeCond" ):
                listener.exitGoeCond(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGoeCond" ):
                return visitor.visitGoeCond(self)
            else:
                return visitor.visitChildren(self)


    class OrCondContext(Logical_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a marzoParser.Logical_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def logical_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(marzoParser.Logical_exprContext)
            else:
                return self.getTypedRuleContext(marzoParser.Logical_exprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrCond" ):
                listener.enterOrCond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrCond" ):
                listener.exitOrCond(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrCond" ):
                return visitor.visitOrCond(self)
            else:
                return visitor.visitChildren(self)


    class IdentCondContext(Logical_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a marzoParser.Logical_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(marzoParser.IDENTIFIER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentCond" ):
                listener.enterIdentCond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentCond" ):
                listener.exitIdentCond(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentCond" ):
                return visitor.visitIdentCond(self)
            else:
                return visitor.visitChildren(self)


    class IntNumberCondContext(Logical_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a marzoParser.Logical_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTEGER_NUMBER(self):
            return self.getToken(marzoParser.INTEGER_NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntNumberCond" ):
                listener.enterIntNumberCond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntNumberCond" ):
                listener.exitIntNumberCond(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntNumberCond" ):
                return visitor.visitIntNumberCond(self)
            else:
                return visitor.visitChildren(self)


    class AndCondContext(Logical_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a marzoParser.Logical_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def logical_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(marzoParser.Logical_exprContext)
            else:
                return self.getTypedRuleContext(marzoParser.Logical_exprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndCond" ):
                listener.enterAndCond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndCond" ):
                listener.exitAndCond(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAndCond" ):
                return visitor.visitAndCond(self)
            else:
                return visitor.visitChildren(self)


    class LCondContext(Logical_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a marzoParser.Logical_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def logical_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(marzoParser.Logical_exprContext)
            else:
                return self.getTypedRuleContext(marzoParser.Logical_exprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLCond" ):
                listener.enterLCond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLCond" ):
                listener.exitLCond(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLCond" ):
                return visitor.visitLCond(self)
            else:
                return visitor.visitChildren(self)


    class LoeCondContext(Logical_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a marzoParser.Logical_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def logical_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(marzoParser.Logical_exprContext)
            else:
                return self.getTypedRuleContext(marzoParser.Logical_exprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoeCond" ):
                listener.enterLoeCond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoeCond" ):
                listener.exitLoeCond(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoeCond" ):
                return visitor.visitLoeCond(self)
            else:
                return visitor.visitChildren(self)


    class NotCondContext(Logical_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a marzoParser.Logical_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def logical_expr(self):
            return self.getTypedRuleContext(marzoParser.Logical_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotCond" ):
                listener.enterNotCond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotCond" ):
                listener.exitNotCond(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotCond" ):
                return visitor.visitNotCond(self)
            else:
                return visitor.visitChildren(self)



    def logical_expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = marzoParser.Logical_exprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_logical_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [marzoParser.T__4]:
                localctx = marzoParser.NotCondContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 48
                self.match(marzoParser.T__4)
                self.state = 49
                self.logical_expr(7)
                pass
            elif token in [marzoParser.IDENTIFIER]:
                localctx = marzoParser.IdentCondContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 50
                self.match(marzoParser.IDENTIFIER)
                pass
            elif token in [marzoParser.INTEGER_NUMBER]:
                localctx = marzoParser.IntNumberCondContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 51
                self.match(marzoParser.INTEGER_NUMBER)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 74
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 72
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = marzoParser.AndCondContext(self, marzoParser.Logical_exprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_logical_expr)
                        self.state = 54
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 55
                        self.match(marzoParser.T__2)
                        self.state = 56
                        self.logical_expr(10)
                        pass

                    elif la_ == 2:
                        localctx = marzoParser.OrCondContext(self, marzoParser.Logical_exprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_logical_expr)
                        self.state = 57
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 58
                        self.match(marzoParser.T__3)
                        self.state = 59
                        self.logical_expr(9)
                        pass

                    elif la_ == 3:
                        localctx = marzoParser.GoeCondContext(self, marzoParser.Logical_exprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_logical_expr)
                        self.state = 60
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 61
                        self.match(marzoParser.T__5)
                        self.state = 62
                        self.logical_expr(7)
                        pass

                    elif la_ == 4:
                        localctx = marzoParser.LoeCondContext(self, marzoParser.Logical_exprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_logical_expr)
                        self.state = 63
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 64
                        self.match(marzoParser.T__6)
                        self.state = 65
                        self.logical_expr(6)
                        pass

                    elif la_ == 5:
                        localctx = marzoParser.GCondContext(self, marzoParser.Logical_exprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_logical_expr)
                        self.state = 66
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 67
                        self.match(marzoParser.T__7)
                        self.state = 68
                        self.logical_expr(5)
                        pass

                    elif la_ == 6:
                        localctx = marzoParser.LCondContext(self, marzoParser.Logical_exprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_logical_expr)
                        self.state = 69
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 70
                        self.match(marzoParser.T__8)
                        self.state = 71
                        self.logical_expr(4)
                        pass

             
                self.state = 76
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Comp_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return marzoParser.RULE_comp_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IfnoelseContext(Comp_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a marzoParser.Comp_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def logical_expr(self):
            return self.getTypedRuleContext(marzoParser.Logical_exprContext,0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(marzoParser.ExprContext)
            else:
                return self.getTypedRuleContext(marzoParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfnoelse" ):
                listener.enterIfnoelse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfnoelse" ):
                listener.exitIfnoelse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfnoelse" ):
                return visitor.visitIfnoelse(self)
            else:
                return visitor.visitChildren(self)


    class PrintContext(Comp_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a marzoParser.Comp_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def print_op(self):
            return self.getTypedRuleContext(marzoParser.Print_opContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint" ):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)

